--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -9,6 +9,9 @@
                  {{ post.title }}
             </a>
         </h2>
+        {% for tag in post.tags.all %}
+            <p>{{ tag.name }}</p>
+        {% endfor %}
         {{ post.body }}
     {% endfor %}
 {% endblock %}
