--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -3,27 +3,27 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="container my-4">
-    {% for post in page %}
-    <div class="card">
-        <a href="">
-            <div class="card-header">
-                <h3>{{ post.title }}</h3>
+    <div class="container my-4">
+        {% for post in posts %}
+            <div class="card">
+                <a href="{{ post.get_absolute_url }}">
+                    <div class="card-header">
+                        <h3>{{ post.title }}</h3>
+                    </div>
+                </a>
+                <div class="card-body">
+                    <p>{{ post.body }}</p>
+                    <h6><b class="user-bold">@{{ post.author }}</b> - {{ post.publish }}</h6>
+                    {% for tag in post.tags.all %}
+                        <a href="/datadump/tag/{{ tag.slug }}">
+                        <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
+                                title="This is the {{ tag.name }} tag">{{ tag }}
+                        </button>
+                    {% endfor %}
+                    </a>
+                </div>
             </div>
-        </a>
-        <div class="card-body">
-            <p>{{ post.body }}</p>
-            <h6><b class="user-bold">@{{post.author}}</b> - {{post.publish}}</h6>
-            {% for tag in post.tags.all %}
-            <a href="/datadump/tag/{{tag.slug}}">
-                <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
-                        title="This is the {{ tag.name }} tag">{{tag}}
-                </button>
-            </a>
-            {% endfor %}
-        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
-{% include "pagination.html" %}
+    {% include "pagination.html" %}
 {% endblock %}
