--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -3,15 +3,24 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+<div class="container my-4">
     {% for post in posts %}
-        <h2>
-            <a href="">
-                 {{ post.title }}
+    <div class="card">
+        <a href="">
+            <div class="card-header">
+                <h3>{{ post.title }}</h3>
+            </div>
+        </a>
+        <div class="card-body">
+            <p>{{ post.body }}</p>
+            <h6><b class="user-bold">@{{post.author}}</b> - {{post.publish}}</h6>
+            {% for tag in post.tags.all %}
+            <a href="/datadump/tag/{{tag.slug}}">
+                <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom" title="This is the {{ tag.name }} tag">{{tag}}</button>
             </a>
-        </h2>
-        {% for tag in post.tags.all %}
-            <p>{{ tag.name }}</p>
-        {% endfor %}
-        {{ post.body }}
+            {% endfor %}
+        </div>
+    </div>
     {% endfor %}
+</div>
 {% endblock %}
