--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'datadump/images/examplelogo.png' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -15,32 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'datadump/styles/base.css' %}">
 </head>
-<style>
-  .btn-tag {
-    padding: 1px 5px !important;
-    font-size: 12px !important;
-    line-height: 1.5 !important;
-    border-radius: 3px !important;
-  }
-
-  .user-bold {
-    font: bold;
-    color: red;
-  }
-
-  a {
-    text-decoration: none;
-    color: #000;
-  }
-
-  a:hover {
-    text-decoration: none;
-    color: #000;
-  }
-  .card {margin: 20px 0px;}
-  .jumbotron {margin: 20px 0px; padding: 32px 16px;}
-</style>
 <body>
 <div id="content">
     {% block content %}
