--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container my-4">
-    {% for post in posts %}
+    {% for post in page %}
     <div class="card">
         <a href="">
             <div class="card-header">
@@ -16,11 +16,14 @@
             <h6><b class="user-bold">@{{post.author}}</b> - {{post.publish}}</h6>
             {% for tag in post.tags.all %}
             <a href="/datadump/tag/{{tag.slug}}">
-                <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom" title="This is the {{ tag.name }} tag">{{tag}}</button>
+                <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
+                        title="This is the {{ tag.name }} tag">{{tag}}
+                </button>
             </a>
             {% endfor %}
         </div>
     </div>
     {% endfor %}
 </div>
+{% include "pagination.html" %}
 {% endblock %}
