--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -25,5 +25,5 @@
             </div>
         {% endfor %}
     </div>
-    {% include "pagination.html" %}
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
