--- a/datadump/static/datadump/styles/base.css
+++ b/datadump/static/datadump/styles/base.css
@@ -22,3 +22,44 @@
   .jumbotron {margin: 20px 0px; padding: 32px 16px;}
 
 
+/* Sidebar */
+
+body{overflow-x: hidden;}
+    .content {
+  height: 100%;
+  width: 70%;
+  float: left;
+  top: 0;
+  overflow-x: hidden;
+  padding: 20px;
+}
+.sidebar {
+  height: 100%;
+  width: 30%;
+  float: left;
+  top: 0;
+  overflow-x: hidden;
+  padding: 20px;
+}
+
+
+
+.sidebar a {color: white;}
+.sidebar a:hover {color: red; transition-duration: 0.3s;}
+
+@media only screen and (max-width: 700px) {
+    .content {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+  padding: 20px;
+}
+.sidebar {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+  padding: 20px;
+}
+}
