--- a/datadump/templates/datadump/post/detail.html
+++ b/datadump/templates/datadump/post/detail.html
@@ -30,7 +30,8 @@
         <p>
             {{ comment.body }}
         </p>
-        <b style="float: left;" class="user-bold">{{ comment.name }}</b> <i style="float: right;">{{ comment.created }}</i>
+        <b style="float: left;" class="user-bold">{{ comment.name }}</b> <i style="float: right;">{{ comment.created
+        }}</i>
     </div>
     {% empty %}
     <p>There are no comments yet.</p>
@@ -52,11 +53,55 @@
         </div>
         <div class="form-group">
             <label for="comment">Comment</label>
-            <textarea type="text" class="form-control" name="content" id="comment" placeholder="Comment" required></textarea>
+            <textarea type="text" class="form-control" name="content" id="comment" placeholder="Comment"
+                      required></textarea>
             <small class="form-text text-muted">Add something helpful about this problem!</small>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     <hr>
+</div>
+{% endblock %}
+{% block sidebar %}
+<div class="container my-4">
+    <div class="card bg-secondary text-white">
+        <div class="card-header">
+            <h3>Five Latest Posts</h3>
+        </div>
+        <div class="card-body">
+            <!-- Should add five latest posts (e.g. 'for post in latest_posts') -->
+            {% for post in posts %}
+            <a href="{{ post.get_absolute_url }}">
+                <p>- {{ post.title }}</p>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="card bg-warning text-white">
+        <div class="card-header">
+            <h3>Most Comments</h3>
+        </div>
+        <div class="card-body">
+            <!-- Should add posts with most comments (e.g. 'for post in most_comments') -->
+            {% for post in posts %}
+            <a href="{{ post.get_absolute_url }}">
+                <p>- {{ post.title }}</p>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="card bg-info text-white">
+        <div class="card-header">
+            <h3>Top Viewed Posts</h3>
+        </div>
+        <div class="card-body">
+            <!-- Should add top 5 viewed posts (e.g. 'for post in most_viewed') -->
+            {% for post in posts %}
+            <a href="{{ post.get_absolute_url }}">
+                <p>- {{ post.title }}</p>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
 </div>
 {% endblock %}
