--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -3,27 +3,70 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <div class="container my-4">
-        {% for post in posts %}
-            <div class="card">
-                <a href="{{ post.get_absolute_url }}">
-                    <div class="card-header">
-                        <h3>{{ post.title }}</h3>
-                    </div>
-                </a>
-                <div class="card-body">
-                    <p>{{ post.body }}</p>
-                    <h6><b class="user-bold">@{{ post.author }}</b> - {{ post.publish }}</h6>
-                    {% for tag in post.tags.all %}
-                        <a href="/datadump/tag/{{ tag.slug }}">
-                        <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
-                                title="This is the {{ tag.name }} tag">{{ tag }}
-                        </button>
-                    {% endfor %}
-                    </a>
-                </div>
+<div class="container my-4">
+    {% for post in posts %}
+    <div class="card">
+        <a href="{{ post.get_absolute_url }}">
+            <div class="card-header">
+                <h3>{{ post.title }}</h3>
             </div>
-        {% endfor %}
+        </a>
+        <div class="card-body">
+            <p>{{ post.body }}</p>
+            <h6><b class="user-bold">@{{ post.author }}</b> - {{ post.publish }}</h6>
+            {% for tag in post.tags.all %}
+            <a href="/datadump/tag/{{ tag.slug }}">
+                <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
+                        title="This is the {{ tag.name }} tag">{{ tag }}
+                </button>
+                {% endfor %}
+            </a>
+        </div>
     </div>
-    {% include "pagination.html" with page=posts %}
+    {% endfor %}
+</div>
+{% include "pagination.html" with page=posts %}
+{% endblock %}
+{% block sidebar %}
+<div class="container my-4">
+    <div class="card bg-secondary text-white">
+        <div class="card-header">
+            <h3>Five Latest Posts</h3>
+        </div>
+        <div class="card-body">
+            <!-- Should add five latest posts (e.g. 'for post in latest_posts') -->
+            {% for post in posts %}
+            <a href="{{ post.get_absolute_url }}">
+                <p>- {{ post.title }}</p>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="card bg-warning text-white">
+        <div class="card-header">
+            <h3>Most Comments</h3>
+        </div>
+        <div class="card-body">
+            <!-- Should add posts with most comments (e.g. 'for post in most_comments') -->
+            {% for post in posts %}
+            <a href="{{ post.get_absolute_url }}">
+                <p>- {{ post.title }}</p>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="card bg-info text-white">
+        <div class="card-header">
+            <h3>Top Viewed Posts</h3>
+        </div>
+        <div class="card-body">
+            <!-- Should add top 5 viewed posts (e.g. 'for post in most_viewed') -->
+            {% for post in posts %}
+            <a href="{{ post.get_absolute_url }}">
+                <p>- {{ post.title }}</p>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
