--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -28,42 +28,43 @@
 {% include "pagination.html" with page=posts %}
 {% endblock %}
 {% block sidebar %}
+{% load datadump_tags %}
 <div class="container my-4">
-    <div class="card bg-secondary text-white">
+    <div class="card bg-dark text-white">
         <div class="card-header">
-            <h3>Five Latest Posts</h3>
+            <h3>Latest Posts</h3>
         </div>
         <div class="card-body">
             <!-- Should add five latest posts (e.g. 'for post in latest_posts') -->
-            {% for post in posts %}
+            {% for post in 5|get_latest_posts %}
             <a href="{{ post.get_absolute_url }}">
-                <p>- {{ post.title }}</p>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="card bg-warning text-white">
-        <div class="card-header">
-            <h3>Most Comments</h3>
-        </div>
-        <div class="card-body">
-            <!-- Should add posts with most comments (e.g. 'for post in most_comments') -->
-            {% for post in posts %}
-            <a href="{{ post.get_absolute_url }}">
-                <p>- {{ post.title }}</p>
+                <p>• {{ post.title }}</p>
             </a>
             {% endfor %}
         </div>
     </div>
     <div class="card bg-info text-white">
         <div class="card-header">
-            <h3>Top Viewed Posts</h3>
+            <h3>Top Used Tags</h3>
         </div>
         <div class="card-body">
             <!-- Should add top 5 viewed posts (e.g. 'for post in most_viewed') -->
-            {% for post in posts %}
+            {% for tag in 5|get_most_tags %}
+            <a href="/datadump/tag/{{ tag.slug }}">
+                <p>• {{ tag.name }}</p>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="card bg-warning text-white">
+        <div class="card-header">
+            <h3>Top Commented Posts</h3>
+        </div>
+        <div class="card-body">
+            <!-- Should add posts with most comments (e.g. 'for post in most_comments') -->
+            {% for post in 5|get_most_comments %}
             <a href="{{ post.get_absolute_url }}">
-                <p>- {{ post.title }}</p>
+                <p>• {{ post.title }}</p>
             </a>
             {% endfor %}
         </div>
