--- a/datadump/static/datadump/styles/base.css
+++ b/datadump/static/datadump/styles/base.css
@@ -63,3 +63,24 @@ body{overflow-x: hidden;}
   padding: 20px;
 }
 }
+
+
+
+/* ============= FOOTER STYLES ==============  */
+ footer {min-height: 200px; background-color: black; padding: 50px; color: white; margin-top: 200px;}
+    @media only screen and (max-width: 500px) {
+        footer {padding: 20px;}
+    }
+    .col-sm-4 {padding: 30px;}
+    .col-sm-4 p {color: grey;}
+    .fa-facebook:hover {color: #3b5998;}
+    .fa-twitter:hover {color: #00acee;}
+    .fa-youtube:hover {color: #FF0000;}
+    .fa-instagram:hover {color:#8a3ab9;}
+    .fa-facebook {margin-right: 30px; border-radius: 50%;font-size: 30px; cursor: pointer; transition-duration: 0.5s;}
+    .fa-instagram {margin-right: 30px; border-radius: 50%;font-size: 30px; cursor: pointer; transition-duration: 0.5s;}
+    .fa-twitter {margin-right: 30px; border-radius: 50%;font-size: 30px; cursor: pointer; transition-duration: 0.5s;}
+    .fa-youtube {margin-right: 30px; border-radius: 50%;font-size: 30px; cursor: pointer; transition-duration: 0.5s;}
+.devider{border: 0;height: 3px; max-width: 120px; width: 100%; background: linear-gradient(to right, #0099ff 50%, #0099ff50 120%);}
+.header-devider{background: linear-gradient(to right, white 50%, #0099ff 120%);} /* changes color of hr tag on header */
+.content-body {min-height: 400px;}
