--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -86,31 +86,39 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form method="POST">
+            <form method="POST" id="contact-form" action="/#contact-form">
+                {% csrf_token %}
                 <div class="modal-body">
-                    {% csrf_token %}
                     <div class="row">
-                        <div class="col">
-                            <label for="Name">Full Name</label>
-                            <input type="text" class="form-control" id="Name" placeholder="Name">
+                        <div class="col-sm-6">
+                            <label>First name</label>
+                            <input class="form-input" type="text" name="first" required>
                         </div>
-                        <div class="col">
-                            <label for="Email">Email</label>
-                            <input type="email" class="form-control" id="Email" placeholder="Email">
+                        <div class="col-sm-6">
+                            <label>Last name</label>
+                            <input class="form-input" type="text" name="last" required>
+                        </div>
+                        <div class="w-100"></div>
+                        <div class="col-sm-6">
+                            <label>Email</label>
+                            <input class="form-input" type="email" name="email" required>
+                        </div>
+                        <div class="col-sm-6">
+                            <label>Phone Number</label>
+                            <input class="form-input" type="tel" name="phone" required>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea type="text" class="form-control" name="message" id="message" placeholder="Message"
-                                  required></textarea>
-                        <small class="form-text text-muted">Write what we can do to help you!</small>
-                    </div>
+                    <label>Message</label>
+                    <textarea class="form-input" name="message" required cols="60" rows="4" minlength="10"></textarea>
+                    <small class="form-text text-muted">Write what we can do to help you!</small>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </form>
+
         </div>
     </div>
 </div>
