--- a/datadump/templates/datadump/post/detail.html
+++ b/datadump/templates/datadump/post/detail.html
@@ -31,7 +31,8 @@
         <p>
             {{ comment.body }}
         </p>
-        <b style="float: left;" class="user-bold">{{ comment.name }}</b> <i style="float: right;">{{ comment.created }}</i>
+        <b style="float: left;" class="user-bold">{{ comment.name }}</b> <i style="float: right;">{{ comment.created
+        }}</i>
     </div>
     {% empty %}
     <p>There are no comments yet.</p>
@@ -39,25 +40,24 @@
 </div>
 <div class="container-lg">
     <hr>
-    <form method="POST">
+    <form method="POST" id="contact-form">
         {% csrf_token %}
         <div class="row">
-            <div class="col">
-                <label for="Name">Full Name</label>
-                <input type="text" class="form-control" id="Name" placeholder="Name">
+            <div class="col-sm-6">
+                <label>Full name</label>
+                <input class="form-input" type="text" name="name" required>
             </div>
-            <div class="col">
-                <label for="Email">Email</label>
-                <input type="email" class="form-control" id="Email" placeholder="Email">
+            <div class="col-sm-6">
+                <label>Email</label>
+                <input class="form-input" type="email" name="email" required>
             </div>
         </div>
         <div class="form-group">
-            <label for="comment">Comment</label>
-            <textarea type="text" class="form-control" name="content" id="comment" placeholder="Comment"
-                      required></textarea>
-            <small class="form-text text-muted">Add something helpful about this problem!</small>
+            <label>Comment</label>
+            <textarea class="form-input" name="message" required cols="60" rows="4" minlength="10"></textarea>
+            <small class="form-text text-muted">Write something helpful about this problem!</small>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button class="btn btn-primary" type="submit">Submit</button>
     </form>
     <hr>
 </div>
