--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -1,4 +1,5 @@
 {% extends 'datadump/base.html' %}
+{% load datadump_tags %}
 
 {% block title %}Home{% endblock %}
 
@@ -28,15 +29,14 @@
 {% include "pagination.html" with page=posts %}
 {% endblock %}
 {% block sidebar %}
-{% load datadump_tags %}
 <div class="container my-4">
     <div class="card bg-dark text-white">
         <div class="card-header">
             <h3>Latest Posts</h3>
         </div>
         <div class="card-body">
-            <!-- Should add five latest posts (e.g. 'for post in latest_posts') -->
-            {% for post in 5|get_latest_posts %}
+            {% get_latest_posts 5 as posts %}
+            {% for post in posts %}
             <a href="{{ post.get_absolute_url }}">
                 <p>• {{ post.title }}</p>
             </a>
@@ -48,10 +48,10 @@
             <h3>Top Used Tags</h3>
         </div>
         <div class="card-body">
-            <!-- Should add top 5 viewed posts (e.g. 'for post in most_viewed') -->
-            {% for tag in 5|get_most_tags %}
-            <a href="/datadump/tag/{{ tag.slug }}">
-                <p>• {{ tag.name }}</p>
+            {% get_most_tags 5 as tags %}
+            {% for item in tags %}
+            <a href="/datadump/tag/{{ item.slug }}">
+                <p>• {{ item.name }}</p>
             </a>
             {% endfor %}
         </div>
@@ -61,8 +61,8 @@
             <h3>Top Commented Posts</h3>
         </div>
         <div class="card-body">
-            <!-- Should add posts with most comments (e.g. 'for post in most_comments') -->
-            {% for post in 5|get_most_comments %}
+            {% get_most_commented_posts 5 as comments %}
+            {% for post in comments %}
             <a href="{{ post.get_absolute_url }}">
                 <p>• {{ post.title }}</p>
             </a>
