--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -20,7 +20,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'datadump/styles/base.css' %}">
 </head>
+<style>
+    .navbar-dark{background-color: #000000!important}
+</style>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/datadump">BiblioStack</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/datadump">Home</a>
+
+            <li class="nav-item">
+                <a class="nav-link" href="/datadump/create-post">Ask Question</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    <img src="{{ user.profile.image.url }}" height="25px" style="border-radius: 50%">
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="/accounts/profile">Profile</a>
+                    <a class="dropdown-item" href="/accounts/logout">Log Out</a>
+                </div>
+            </li>
+            {% endif %}
+            {% if not user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="/accounts/login">Log In</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
 <div class="content-body">
     <div class="row">
         <div id="content" class="content">
