--- a/datadump/templates/datadump/post/create_post.html
+++ b/datadump/templates/datadump/post/create_post.html
@@ -58,7 +58,8 @@
             <h4>Step 3: Describe what you've tried</h4>
         </div>
         <div class="card-body">
-            Show what you’ve tried and tell us what you found (on this site or elsewhere) and why it didn’t meet your needs. You can get better answers when you provide research.
+            Show what you’ve tried and tell us what you found (on this site or elsewhere) and why it didn’t meet your
+            needs. You can get better answers when you provide research.
         </div>
     </div>
 </div>
