--- a/datadump/static/datadump/styles/base.css
+++ b/datadump/static/datadump/styles/base.css
@@ -9,7 +9,7 @@ border-radius: 3px !important;
 .user-bold {
 color: red;
 }
-
+.navbar-dark{background-color: #000000!important}
 a {
 text-decoration: none;
 color: #000;
