Be able to send emails from contact us form

--- a/datadump/templates/datadump/post/create_post.html
+++ b/datadump/templates/datadump/post/create_post.html
@@ -36,7 +36,7 @@
                     </div>
                 </fieldset>
                 <div class="form-group">
-                    <button class="btn btn-outline-info" type="submit">Submit</button>
+                    <button class="btn btn-outline-info" type="submit" name="create_post">Submit</button>
                 </div>
             </form>
             <hr>
