--- a/datadump/templates/datadump/post/detail.html
+++ b/datadump/templates/datadump/post/detail.html
@@ -60,7 +60,7 @@
             <textarea class="form-input" name="comment" required cols="60" rows="4" minlength="10"></textarea>
             <small class="form-text text-muted">Write something helpful about this problem!</small>
         </div>
-        <button class="btn btn-primary" type="submit">Post Your Answer</button>
+        <button class="btn btn-primary" type="submit" name="add_comment">Post Your Answer</button>
     </form>
     <hr>
 </div>
