--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -123,7 +123,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form method="POST" id="contact-form" action="/#contact-form">
+            <form method="POST" id="contact-form">
                 {% csrf_token %}
                 <div class="modal-body">
                     <div class="row">
@@ -152,7 +152,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary" name="contact_us">Submit</button>
                 </div>
             </form>
 
