--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="shortcut icon" type="image/png" href="{% static 'datadump/images/examplelogo.png' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'datadump/images/logo_bibliostack.png' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -27,9 +27,15 @@
     <link rel="stylesheet" href="{% static 'datadump/tagsinput/app.css' %}">
     <link rel="stylesheet" href="{% static 'datadump/styles/base.css' %}">
 </head>
+<style>
+    .logo {transition: transform .2s;}
+    .logo:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+</style>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/datadump">BiblioStack</a>
+    <a class="navbar-brand" href="/datadump"><img src="{% static 'datadump/images/logo_bibliostack.png' %}" height="30px" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,6 +71,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="/accounts/profile">Profile</a>
+                    <a class="dropdown-item" href="/accounts/posts">My Posts</a>
                     <a class="dropdown-item" href="/accounts/logout">Log Out</a>
                 </div>
             </li>
