--- a/datadump/templates/datadump/post/detail.html
+++ b/datadump/templates/datadump/post/detail.html
@@ -21,6 +21,14 @@
             {% endfor %}
         </div>
     </div>
+    {% if user == post.author %}
+    <hr>
+    <form method="post">
+        {% csrf_token %}
+        <a href="{{ post.get_absolute_url }}update/"><button class="btn btn-info" type="button">Update Question</button></a>
+        <button class="btn btn-danger float-right" type="submit" name="delete_post">Delete Question</button>
+    </form>
+    {% endif %}
     <hr>
 </div>
 <div class="container-lg">
