--- a/datadump/static/datadump/styles/base.css
+++ b/datadump/static/datadump/styles/base.css
@@ -145,3 +145,12 @@ textarea.form-input {resize: vertical;}
   content: "\f106";
 }
 p.panel-title{margin-bottom: 0;}
+
+
+
+/* logo style */
+
+.logo {transition: transform .2s;}
+.logo:hover {
+    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
