Added users profile

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -18,7 +18,7 @@
         </div>
     </form>
 </div>
-{% endblock content %}
+{% endblock %}
 {% block sidebar %}
 <div class="card" style="width: 18rem;">
     <img class="card-img-top" src="{{ user.profile.image.url }}">
