--- a/datadump/templates/datadump/base.html
+++ b/datadump/templates/datadump/base.html
@@ -20,7 +20,6 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="{% static 'datadump/tagsinput/bootstrap-tagsinput.css' %}">
@@ -65,8 +64,7 @@
                     <img src="{{ user.profile.image.url }}" height="25px" style="border-radius: 50%">
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/accounts/profile">Profile</a>
-                    <a class="dropdown-item" href="/accounts/posts">My Posts</a>
+                    <a class="dropdown-item" href="/accounts/profile/{{ user.id }}">Profile</a>
                     <a class="dropdown-item" href="/accounts/logout">Log Out</a>
                 </div>
             </li>
@@ -197,9 +195,6 @@ $(function() {
     source: availableTags
   });
   });
-
-
-
 </script>
 <script src="{% static 'datadump/tagsinput/bootstrap-tagsinput.min.js' %}"></script>
 <script src="{% static 'datadump/tagsinput/bootstrap-tagsinput-angular.min.js' %}"></script>
