--- a/datadump/templates/datadump/post/detail.html
+++ b/datadump/templates/datadump/post/detail.html
@@ -11,7 +11,7 @@
         </div>
         <div class="card-body">
             <p>{{ post.body }}</p>
-            <h6><b class="user-bold">@{{post.author}}</b> - {{post.publish}}</h6>
+            <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> - {{post.publish}}</h6>
             {% for tag in post.tags.all %}
             <a href="/datadump/tag/{{tag.slug}}">
                 <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
