--- a/datadump/templates/datadump/post/search_results.html
+++ b/datadump/templates/datadump/post/search_results.html
@@ -22,7 +22,7 @@
         </a>
         <div class="card-body">
             <p>{{ post.body }}</p>
-            <h6><b class="user-bold">@{{ post.author }}</b> - {{ post.publish }}</h6>
+            <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> - {{ post.publish }}</h6>
             {% for tag in post.tags.all %}
             <a href="/datadump/tag/{{ tag.slug }}">
                 <button class="btn btn-primary btn-tag" data-toggle="tooltip" data-placement="bottom"
