--- a/datadump/static/datadump/styles/base.css
+++ b/datadump/static/datadump/styles/base.css
@@ -154,3 +154,5 @@ p.panel-title{margin-bottom: 0;}
 .logo:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
+
+blockquote{border-left: 4px solid gray; background: rgba(0,0,0,.03); padding-left: 2px;}
