--- a/datadump/templates/datadump/post/list.html
+++ b/datadump/templates/datadump/post/list.html
@@ -16,7 +16,9 @@
             </div>
         </a>
         <div class="card-body">
-            <p>{{ post.body }}</p>
+            {% with post.body|markdown|safe as body %}
+            <p>{{ body }}</p>
+            {% endwith %}
             <h6><a href="/accounts/profile/{{post.author.id}}"><b class="user-bold">@{{ post.author }}</b></a> - {{ post.publish }}</h6>
             {% for tag in post.tags.all %}
             <a href="/datadump/tag/{{ tag.slug }}">
